--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
   region: us-east-1
   profile: default
   memorySize: 256 # optional, in MB, default is 1024
-  stage: dev
+  stage: prod
 
 plugins:
   - serverless-offline
@@ -22,17 +22,21 @@ functions:
       - http:
           path: handleState
           method: post
+  currentState:
+    handler: index.currentState
 
 custom:
   dynamodb:
     stages:
       - test
       - dev
-    # Our stage is based on what is passed in when running serverless
-    # commands. Or fallsback to what we have set in the provider section.
-    stage: ${opt:stage, self:provider.stage}
-    # Set the table name here so we can use it while testing locally
-    tableName: ${self:custom.stage}-games
+  # Our stage is based on what is passed in when running serverless
+  # commands. Or fallsback to what we have set in the provider section.
+  stage: ${opt:stage, self:provider.stage}
+  # Set the table name here so we can use it while testing locally
+  tableName: ${self:custom.stage}-games
+  serverless-offline:   ## add this two lines
+    port: 4000        ## bellow "custom:" line
 
 Resources:
   gamesTable:
