--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "javascript-state-machine": "^3.1.0",
     "serverless": "^1.50.1",
     "serverless-http": "^2.3.0",
     "slspress": "^2.2.5"
