--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/serverless offline -s dev",
-    "debug": "export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev"
+    "debug": "export SERVERLESS_IS_OFFLINE=true && export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev"
   },
   "author": "Roman Smelyansky",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.519.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "javascript-state-machine": "^3.1.0",
     "serverless": "^1.50.1",
+    "serverless-dynamodb-client": "0.0.2",
     "serverless-http": "^2.3.0",
-    "slspress": "^2.2.5"
+    "slspress": "^2.2.5",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "serverless-dynamodb-local": "^0.2.38",
