--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/serverless offline -s dev",
-    "debug": "export SERVERLESS_IS_OFFLINE=true && export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev"
+    "debug": "export SERVERLESS_IS_OFFLINE=true && export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev",
+    "test": "mocha --timeout 10000"
   },
   "author": "Roman Smelyansky",
   "license": "ISC",
@@ -21,6 +22,9 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.0",
     "serverless-dynamodb-local": "^0.2.38",
     "serverless-offline": "^5.10.1"
   }
