--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/serverless offline -s dev",
-    "debug": "export SERVERLESS_IS_OFFLINE=true && export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev",
-    "test": "mocha --timeout 10000"
+    "debug": "export SLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline -s dev",
+    "test": "export NODE_ENV=test && mocha --timeout 10000"
   },
   "author": "Roman Smelyansky",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.519.0",
     "body-parser": "^1.19.0",
+    "config": "^3.2.2",
     "express": "^4.17.1",
     "javascript-state-machine": "^3.1.0",
     "serverless": "^1.50.1",
