--- a/serverless.yml
+++ b/serverless.yml
@@ -49,13 +49,12 @@ functions:
 custom:
   dynamodb:
     stages:
-      - dev
+      - test
     start:
       port: 8000
       inMemory: true
       migrate: true
-    migration:
-      dir: offline/migrations
+
   # Our stage is based on what is passed in when running serverless
   # commands. Or fallsback to what we have set in the provider section.
   stage: ${opt:stage, self:provider.stage}
