--- a/serverless.yml
+++ b/serverless.yml
@@ -9,6 +9,25 @@ provider:
   profile: default
   memorySize: 256 # optional, in MB, default is 1024
   stage: dev
+  
+  environment:
+    machineTableName: ${self:custom.machineTableName}
+    instanceTableName: ${self:custom.instanceTableName}
+
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      # Restrict our IAM role permissions to
+      # the specific table for the stage
+      Resource:
+        - "Fn::GetAtt": [ NotesTable, Arn ]
 
 plugins:
   - serverless-dynamodb-local
@@ -96,24 +115,3 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
-
-iamRoleStatements:
-  # These environment variables are made available to our functions
-  # under process.env.
-  environment:
-    tableName: ${self:custom.tableName}
-
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:DescribeTable
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:UpdateItem
-        - dynamodb:DeleteItem
-      # Restrict our IAM role permissions to
-      # the specific table for the stage
-      Resource:
-        - "Fn::GetAtt": [ NotesTable, Arn ]
