--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "serverless-dynamodb-client": "0.0.2",
     "serverless-http": "^2.3.0",
     "slspress": "^2.2.5",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "webpack": "^4.39.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
