--- a/serverless.test.yml
+++ b/serverless.test.yml
@@ -1,5 +1,23 @@
 - name: creates machine instance
-  endpoint: {function: createMachineInstance}
-  response:
-    body: 
-        machine: "{\"init\":\"solid\",\"transitions\":[{\"name\":\"melt\",\"from\":\"solid\",\"to\":\"liquid\"},{\"name\":\"freeze\",\"from\":\"liquid\",\"to\":\"solid\"},{\"name\":\"vaporize\",\"from\":\"liquid\",\"to\":\"gas\"},{\"name\":\"condense\",\"from\":\"gas\",\"to\":\"liquid\"}]}"
+  endpoint: 
+    method: post
+    path: /machine
+  response: 
+    status: 200
+  request:
+    body:
+      machine:
+        init: solid
+        transitions:
+          - name: melt
+            from: solid
+            to: liquid
+          - name: freeze
+            from: liquid
+            to: solid
+          - name: vaporize
+            from: liquid
+            to: gas
+          - name: condense
+            from: gas
+            to: liquid
